# SentinelEdge

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURES.md  Makefile  README.md  SECURITY.md  blueprint.md  build.rs  docker-compose.yml
.devcontainer/: devcontainer.json
admin-console/: admin.html  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
bench-history/: data.js
benches/: pipeline.rs
demo/: docker-compose.yml  seed.sh
deploy/: com.wardex.agent.plist  otlp.yaml  prometheus-rules.yml  wardex.service
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_MODELS.md  FEATURE_UI_COVERAGE.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  PAPER_TARGETS.md  PRODUCTION_HARDENING.md  PROJECT_BACKLOG.md  README.md  RELEASE_ACCEPTANCE.md  REPRODUCIBILITY.md  RESEARCH_TRACKS.md  ROADMAP_XDR_PROFESSIONAL.md  SDK_GUIDE.md  STATUS.md  THREAT_MODEL.md  WASM_TUTORIAL.md  openapi.yaml
examples/: README.md  credential_storm.jsonl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: csv_parse.rs  jsonl_parse.rs  yara_load.rs
scripts/: build_changelog.py  build_local_release.sh  build_rules_index.py  changelog_reset_unreleased.py  release_acceptance.sh  validate_container_build_contract.sh
sdk/: generate.sh
site/: 404.html  admin.html  admin.js  api.html  app.js  architecture.html  changelog.html  checkout.html  comparison.html  donate.html  features.html  index.html  install.sh  integrations.html  pricing.html  resources.html  (+6 more)
(+308 files in other folders)
